--- a/packages/assets-loader/test/src/index.wxml
+++ b/packages/assets-loader/test/src/index.wxml
@@ -2,6 +2,6 @@
 <wxs src="./index.wxs" module="tool"></wxs>
 <template is="comp"></template>
 <view>hello world</view>
-<image src="./level{{tools.getWordLevel(score)}}.png" />
+<image src="@/growth{{tools.getWordLevel(score)}}.png" />
 <image src="./level1.png" />
 <include src="./comp.wxml"/>
