feat(weapp-plugin): 支持跨分包动态引入图片、更新 json 组件引用

--- a/test/src/components/abc-button/abc-button.wxml
+++ b/test/src/components/abc-button/abc-button.wxml
@@ -2,4 +2,5 @@
 <view class="abc-button {{type}}-{{color}} {{disabled ? 'disabled' : ''}} ext-class" bind:tap="onClick" style="{{cpt.getWidth(width)}}">
   <slot></slot>
   <image src="@/assets/img/file.png"></image>
+  <image src="@/assets/img/level{{num}}.png"></image>
 </view>
