--- a/packages/assets-loader/test/src/index.wxml
+++ b/packages/assets-loader/test/src/index.wxml
@@ -1,7 +1,7 @@
-<import src="@/comp.wxml"/>
+<!-- <import src="@/comp.wxml"/> -->
 <wxs src="./index.wxs" module="tool"></wxs>
 <template is="comp"></template>
 <view>hello world</view>
-<image src="@/growth{{tools.getWordLevel(score)}}.png" />
+<!-- <image src="@/growth{{tools.getWordLevel(score)}}.png" /> -->
 <image src="./level1.png" />
-<include src="./comp.wxml"/>
+<!-- <include src="./comp.wxml"/> -->
