fix(assets-loader): 后缀名匹配问题

--- a/test/src/app.less
+++ b/test/src/app.less
@@ -1,8 +1,8 @@
 @import '@/assets/css/reset.css';
-/* @import '@/assets/css/vars.less'; */
+@import '@/assets/css/vars.less';
 
 page {
-  /* color: @black;  */
+  color: @black; 
   background-color: #FFFFFF;
   /* color: #000; */
 }
