feat(assets-loader): 不再解析运行时依赖, 而是抛出警告

--- a/packages/assets-loader/test/src/index.wxml
+++ b/packages/assets-loader/test/src/index.wxml
@@ -3,5 +3,6 @@
 <template is="comp"></template>
 <view>hello world</view>
 <!-- <image src="@/growth{{tools.getWordLevel(score)}}.png" /> -->
+<image src="{{ true && "@/growth" + tools.getWordLevel(score) + ".png" }}" />
 <image src="./level1.png" />
 <!-- <include src="./comp.wxml"/> -->
